--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <title>Send to Google Form</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </head>
   <body>
+    <h1>Environment details</h1>
+    <div id="browser"></div>
   </body>
+  <script src="/app.js"></script>
 </html>
