--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Send to Google Form</title>
+    <title>Report An Issue With Advertising</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="assets/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <style type="text/css">
+      body {
+        font-family: 'Lato';
+        background: aqua;
+      }
+      h1 {
+        color: magenta;
+      }
+      h3 {
+        color: green;
+      }
       iframe {
         display: none;
       }
@@ -25,16 +36,18 @@
   <body>
     <h1>Report An Issue With Advertising</h1>
 
-    <form id="email-form" action="" method="POST" target="no-target">
+    <form id="ad-report-form" action="" method="POST" target="no-target">
 
       <section>
         <h3>Tell us about your environment.</h3>
         <span>Providing environment details will help us better debug the problem ad.</span>
 
         <div id="browser"></div>
+
+
         <div class="browser-toggle">
-          <label for="environment">It's ok to send environment details with this report.</label>
           <input name="browser-toggle" type="checkbox">
+          <label for="environment">It's ok to send environment details with this report.</label>
         </div>
       </section>
 
@@ -55,8 +68,17 @@
         <textarea id="details" type="text"></textarea>
       </section>
 
-      <label for="email">Email address</label>
-      <input id="email" type="email" placeholder="enter email" name="email">
+      <section>
+        <h3>Tell us who you are.</h3>
+        <label for="name">Tell us who you are.</label>
+        <input id="name" type="text">
+
+        <input id="anon" type="checkbox">
+        <label for="anon">Keep Me Anonymous</label>
+        <span>Note: While Eater guarantees your anonymity, it may be necessary to contact you to verify your tip. If you’d rather email someone directly, email contacts can be found on our masthead page.</span>
+
+        <label for="email">Your email address</label>
+        <input id="email" type="email" placeholder="enter email" name="email">
 
       <button id="email-submit" type="submit">SUBMIT</button>
     </form> 
