--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <title>Report An Issue With Advertising</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="assets/style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <style type="text/css">
@@ -120,5 +116,5 @@
     <iframe src="_blank" id="no-target" name="no-target"></iframe> 
     <div><img src="http://media0.giphy.com/media/KAS8YrcoFWFcQ/giphy.gif" /></div>
   </body>
-  <script src="/app.js"></script>
+  <script src="app.js"></script>
 </html>
