--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
           <input type="checkbox"><label>Pages load faster without ads</label></input>
         </div>
 
-        <div class="ad-survey__form--option">
+        <div class="ad-survey__form--option ad-survey__form--option--other">
           <input type="checkbox"><label>Other</label></input>
         </div>
         <div class="ad-survey__form--option">
-          <textarea rows="5" placeholder="Type your reason(s) here..."></textarea>
+          <textarea class="ad-survey__form--option--text" disabled="disabled" rows="5" placeholder="Type your reason(s) here..."></textarea>
         </div>
 
-        <button id="submit" type="submit">Submit Response</button>
+        <button class="ad-survey__submit" type="submit">Submit Response</button>
         <div class="ad-survey__form--anon">All responses are anonymous</div>
       </form> 
       </div>
