--- a/index.html
+++ b/index.html
@@ -15,34 +15,35 @@
         <h3 class="ad-survey__header--cta">Ads can be improved. Please tell us the reason(s) you've chosen to use an ad blocker:</h3>
       </div>
       <div class="ad-survey__form">
-      <form id="ad-report-form" action="" method="POST" target="no-target">
+
+      <form id="ad-survey-form" action="" method="POST" target="no-target">
         <span class="ad-survey__form--instructions">Check all that apply:</span>
 
-        <div class="ad-survey__form--option">
+        <div class="ad-survey__form--option q1">
           <input type="checkbox"><label>Concern for viruses</label></input>
         </div>
 
-        <div class="ad-survey__form--option">
+        <div class="ad-survey__form--option q2">
           <input type="checkbox"><label>Lack of trust that ads are safe</label></input>
         </div>
 
-        <div class="ad-survey__form--option">
+        <div class="ad-survey__form--option q3">
           <input type="checkbox"><label>Desire to not have browsing habits recorded</label></input>
         </div>
 
-        <div class="ad-survey__form--option">
+        <div class="ad-survey__form--option q4">
           <input type="checkbox"><label>Ads that play video or audio don't belong</label></input>
         </div>
 
-        <div class="ad-survey__form--option">
+        <div class="ad-survey__form--option q5">
           <input type="checkbox"><label>Remove distraction from reading</label></input>
         </div>
 
-        <div class="ad-survey__form--option">
+        <div class="ad-survey__form--option q6">
           <input type="checkbox"><label>Pages load faster without ads</label></input>
         </div>
 
-        <div class="ad-survey__form--option ad-survey__form--option--other">
+        <div class="ad-survey__form--option ad-survey__form--option--other q7">
           <input type="checkbox"><label>Other</label></input>
         </div>
         <div class="ad-survey__form--option">
@@ -50,13 +51,13 @@
         </div>
 
         <button class="ad-survey__submit" type="submit">Submit Response</button>
+
         <div class="ad-survey__form--anon">All responses are anonymous</div>
       </form> 
       </div>
+      <!-- a blank iframe -->
+      <iframe src="blank" id="no-target" name="no-target"></iframe> 
     </div>
-
-    <!-- a blank iframe -->
-    <!-- <iframe src="_blank" id="no-target" name="no-target"></iframe>  -->
     <center><img src="http://40.media.tumblr.com/a24147fd5fff5ffb76dc2ae3966bffe4/tumblr_nqms88kW6O1qjcdw9o1_1280.jpg" style="margin-top: 80px;" width="500px" /></center>
   </body>
   <script src="app.js"></script>
