sending other response also works now, hiding iframe also

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </form> 
       </div>
       <!-- a blank iframe -->
-      <iframe src="blank" id="no-target" name="no-target"></iframe> 
+      <iframe style="display: none;" src="" id="no-target" name="no-target"></iframe> 
     </div>
     <center><img src="http://40.media.tumblr.com/a24147fd5fff5ffb76dc2ae3966bffe4/tumblr_nqms88kW6O1qjcdw9o1_1280.jpg" style="margin-top: 80px;" width="500px" /></center>
   </body>
