adding vox media logo and close button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
   <body>
     <div class="ad-survey__container">
       <div class="ad-survey__header">
-        <span>Logo here.</span><span>Vox Media User Survey</span>
+        <!-- Close button -->
+        <svg class="ad-survey__close" width="29px" height="29px" viewBox="0 0 29 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <title>Close</title>
+            <desc>Close button</desc>
+            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g transform="translate(-959.000000, -53.000000)" stroke="#FFFFFF">
+                    <g transform="translate(960.158429, 54.135742)">
+                        <circle fill-opacity="0.154806386" fill="#0D0D0D" cx="13.5" cy="13.5" r="13.5"></circle>
+                        <path d="M19.6919621,19.6919621 L7.30803792,7.30803792" stroke-linecap="square"></path>
+                        <path d="M7.30803792,19.6919621 L19.6919621,7.30803792" stroke-linecap="square"></path>
+                    </g>
+                </g>
+            </g>
+        </svg>
+        <svg class="ad-survey__logo" xmlns="http://www.w3.org/2000/svg" width="138.8" height="117.7" viewBox="0 0 138.8 117.7"><g><path class="st2" d="M138.6.3v78l-69.2-39z"/><path class="st44" d="M.2.3v78l69.2-39z"/><path class="st4" d="M69.4 39.3v78l69.2-39z"/><path class="st45" d="M69.4 39.3v78l-69.2-39z"/></g></svg>
+        <span class="ad-survey__title">Vox Media User Survey</span>
         <h3 class="ad-survey__header--cta">Ads can be improved. Please tell us the reason(s) you've chosen to use an ad blocker:</h3>
       </div>
       <div class="ad-survey__form">
